examples/test/testpolicy14033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14033
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key6: value35
      key22: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value27
      podSelector:
        matchLabels:
          key28: value30
          key29: value4
